compiler/acton/test/typeerrors/tuple_proto.act
def f() -> str:
    d = {(1, [2]): "a"}
    return d[(1, [2])]

actor main(env):
    print(f())
    env.exit(0)
